Rename profile picture - fix error 404 image not found

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Minhas redes sociais</h1>
         <h2>Quem sou eu?</h2>
-        <img src="Sem título200.png" alt="">
+        <img src="Foto200.png" alt="">
 
         <p> Meu nome é <b>Vitor Henrique</b>,  sou estudante de Análise e Desensolvimento de Sistemas. <br>
             Este é meu quinto desafio em <abbr title="HyperText Markup Language - Cascading Style Sheets"><mark style="background-color: rgb(237, 188, 154);">HTML-CSS</mark>.</abbr>
