--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             background-color: rgba(232, 242, 219, 0.794);
         }
     </style>
-    <link rel="shortcut icon" href="iconcanda.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="icon-canada.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Minhas redes sociais</h1>
