--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
     <link rel="shortcut icon" href="icon-canada.ico" type="image/x-icon">
 </head>
-<body style="display: flex; flex-direction: column; align-items: center; background: #333333; color: white"></body>>
+<body style="display: flex; flex-direction: column; align-items: center; background: #333333; color: white"></body>
     <h1>Minhas redes sociais</h1>
         <h2>Quem sou eu?</h2>
         <img src="Foto200.png" alt="" style="height: 300px; width: 300px">
